force-app/main/default/objects/DocFab_Record_Model__mdt/DocFab_Record_Model__mdt.object-meta.xml
<CustomObject>
    <description>Master definition for DocFab Record Models. Every Record Model ID used must have an entry here with its field configuration for pre-population.</description>
    <label>DocFab Record Model</label>
    <pluralLabel>DocFab Record Models</pluralLabel>
</CustomObject>