force-app/main/default/objects/DocFab_Record_Model__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>API name of the Custom Permission required to access this record model. Users without this permission will not see this record model as an option. This field is required.</description>
    <label>Custom Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>