force-app/main/default/objects/DocFab_Record_Model__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this record model is used for.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>