force-app/main/default/objects/DocFab_Record_Model__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Optional Salesforce icon name to display in the selection modal (e.g., utility:edit_form, action:new_account). If not specified, defaults to utility:data_mapping.</description>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>