force-app/main/default/objects/DocFab_Record_Model__mdt/fields/Record_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Model_Id__c</fullName>
    <description>The DocFab Record Model ID. Must be unique across all records.</description>
    <externalId>true</externalId>
    <label>Record Model ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>